# arogya

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  run_audit.py
src/: __main__.py  core.py  health.py  utils.py
src/arogya/: __init__.py  auditor.py  cli.py  demographics.py  domains.py  metrics.py  mitigations.py  models.py  report.py
tests/: test_auditor.py  test_benchmark.py  test_core.py  test_integration.py  test_metrics.py
